--- a/src/components/Description.css
+++ b/src/components/Description.css
@@ -2,6 +2,7 @@
   border: 1px black solid;
   width: 60%;
   margin: 25px auto;
+  padding: 15px;
 }
 
 .app-description h1{
@@ -10,4 +11,6 @@
 
 .app-description h2{
   font-size: 20px;
+  width: 80%;
+  margin: auto;
 }
