--- a/src/routes/RegistrationRoute/Registration.css
+++ b/src/routes/RegistrationRoute/Registration.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
+  max-height: 100vh;
 }
 
 #form-container {
