--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,9 +6,14 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
   min-width: 320px;
-  min-height: 100%;
+  height: 100vh;
+  min-height: 100vh;
 }
 
+.header {
+  grid-column-start: 1;
+  grid-column-end: 13;
+}
 
 
 main {
