--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,22 @@
 .footer {
   max-width: 100vw;
   background: #42836e;
-  max-height: 100px;
-  grid-column-start: 1;
-  grid-column-end: 13;
-  display: inline;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 16px;
+  height: 75px;
 }
+
+.team-info {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  margin: auto;
+}
+
+.links-to-tech {
+  grid-column-start: 11;
+  grid-column-end: 13;
+  margin: auto;
+}
+
+
