more styling job before moving to next components

--- a/colors.css
+++ b/colors.css
@@ -1,8 +1,18 @@
 colors {
-  color: #42836e;
-  color: #66ddaa;
-  color: #9affe1;
-  color: #02ffff;
-  color: #00e8eb;
+  color: #d7c49e;
+  color: #3b3a50;
+  color: #f2edd7;
+  color: #56403e;
+  color: #fc766a;
   color: #ececec;
+  color: #eeebd9;
+}
+
+AWcolors {
+  color: #DD5A91;
+  color: #3C3230;
+  color: #DCD7D4;
+  color: #9E4624;
+  color: #3C824E;
+  color: #FFDA71;
 }
