--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -9,5 +9,6 @@
 .Input:focus {
   transition: 0.3s;
   transform: scale(1.2);
-  box-shadow: 0.5em 0.5em 0.2em grey;
+  /* box-shadow: 0.5em 0.5em 0.2em grey; */
+  outline: none;
 }
