--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,26 +1,32 @@
 .header {
   max-width: 100vw;
-  background: #42836e;
+  background: #3C3230;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 16px;
   height: 50px;
   margin-left: 0%;
+  position: relative;
 
 }
 
 
 .logo {
   width: 50%;
-  margin: auto;
   grid-column-start: 2;
   grid-column-end: 4;
   text-decoration: none;
+  margin: auto;
+}
+
+.logo > a > h2 {
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 .logo > a {
   text-decoration: none;
-  font-size: 26px;
+  color: #FFDA71;
 }
 
 .nav {
