--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,27 @@
   box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css?family=Barlow|Staatliches&display=swap');
+
+h2 {
+  font-family: 'Staatliches', cursive;
+  font-size: 2em;
+}
+
+p {font-size: 1em}
+
+a {
+  text-decoration: none;
+  color: #FFDA71;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Barlow', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(#DCD7D4, #9E4624);
 }
 
 code {
