--- a/src/routes/DashboardRoute/DashboardRoute.css
+++ b/src/routes/DashboardRoute/DashboardRoute.css
@@ -3,6 +3,14 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 1em;
 }
+.dashboard-image > img {
+  height: 320px;
+  width: 320px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+}
 
 .title {
   grid-column-start: 1;
