--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -9,5 +9,6 @@
 .Button:hover {
   transition: 0.3s;
   transform: scale(1.2);
+  background: #3C824E;
   box-shadow: 0.5em 0.5em 0.2em rgb(48, 39, 39);
 }
