--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,14 +19,9 @@
   margin: auto;
 }
 
-.logo > a > h2 {
-  margin-block-start: 0;
-  margin-block-end: 0;
-}
-
-.logo > a {
-  text-decoration: none;
-  color: #FFDA71;
+.logo > a > img {
+  height: 50px;
+  width: 50px;
 }
 
 .nav {
