--- a/src/routes/LoginRoute/LoginRoute.css
+++ b/src/routes/LoginRoute/LoginRoute.css
@@ -5,6 +5,8 @@
 }
 .login-image {
   position: relative;
+  grid-column-start: 1;
+  grid-column-end: 9;
 }
 
 .login-image > img {
@@ -12,7 +14,7 @@
   width: 320px;
   position: absolute;
   top: 0;
-  left: 0;
+  right: -10%;
   z-index: -1;
 }
 
@@ -20,5 +22,5 @@
   grid-column-start: 3;
   grid-column-end: 7;
   text-align: center;
-  color: #3C3230;
+  color: #eeebd9;
 }
