--- a/src/components/SideNav/SideNav.css
+++ b/src/components/SideNav/SideNav.css
@@ -9,7 +9,12 @@
   text-align: left;
   background: #3C3230;
   color: #eeebd9;
+}
+
+.SideNav:hover {
   box-shadow:  0.5em 0.5em 0.2em rgb(48, 39, 39);
+  transition: all 0.2s ease-in-out;
+  transform: scale(1.05);
 }
 
 .link {
