--- a/src/components/SavedJob/SavedJob.css
+++ b/src/components/SavedJob/SavedJob.css
@@ -1,7 +1,11 @@
-.job-status, .edit-job-form{
+.job-status{
   border: 1px solid black;
   padding: 5px;
   width: 100%;
+}
+
+.job-box button{
+  margin: 15px;
 }
 
 .green{
@@ -13,10 +17,22 @@
 }
 
 .edit-job-form label, input{
-  display: block;
+  display: inline block;
   margin: 5px;
 }
 
 .edit-job-form button{
   margin: 15px;
 }
+
+.edit-job-form{
+  margin: 10px;
+  border: 1px solid black;
+  padding: 15px;
+}
+
+.edit-job-form textarea{
+  font-family: sans-serif;
+}
+
+
