--- a/src/components/FindProfessionalsForm/FindProfessionalForm.css
+++ b/src/components/FindProfessionalsForm/FindProfessionalForm.css
@@ -1,3 +1,18 @@
+.ProfessionalSearchForm {
+  width: 320px;
+  border: 1px black solid;
+  min-width: 300px;
+  margin: 0 auto;
+  padding: 5%;
+  line-height: 150%;
+  border-radius: 10px;
+  text-align: center;
+  margin: auto;
+  background: #3b3a50;
+  color: #eeebd9;
+  box-shadow:  0.5em 0.5em 0.2em rgb(48, 39, 39);
+}
+
 .option {
-    color: black;
+  color: black;
 }
